tests/lean/typeOf.lean.expected.out
typeOf.lean:11:21-11:24: error: type mismatch
  x + 1
has type
  Nat : Type
but is expected to have type
  Bool : Type
typeOf.lean:20:54-20:60: error: invalid reassignment, term has type
  Bool : Type
but is expected to have type
  Nat : Type
typeOf.lean:29:53-29:57: error: natural number expected, value has type
  Bool : Type
but is expected to have type
  Nat : Type
